# minecraft-clone

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  gen-compile-db.sh  run.sh
res/shaders/: basic.glsl
src/: main.cpp
src/game/: chunk.cpp  cube.cpp  player.cpp  world.cpp
src/include/game/: chunk.hpp  cube.hpp  geometry.hpp  perlin.hpp  player.hpp  random.hpp  textute-atlas.hpp  tiles.hpp  world.hpp
src/include/renderer/: camera.hpp  core.hpp  index-buffer.hpp  renderer.hpp  shader.hpp  texture.hpp  vertex-array.hpp  vertex-buffer-layout.hpp  vertex-buffer.hpp
src/renderer/: camera.cpp  chunk.cpp  core.cpp  index-buffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex-array.cpp  vertex-buffer-layout.cpp  vertex-buffer.cpp
